[project]
name = "ai_content_factory"
version = "0.1.0"
description = "ai_content_factory using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
ai_content_factory = "ai_content_factory.main:run"
run_crew = "ai_content_factory.main:run"
train = "ai_content_factory.main:train"
replay = "ai_content_factory.main:replay"
test = "ai_content_factory.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
